# ot-bl702

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
script/: bootstrap  bootstrap_bl_sdk  build  check-bl702-build  setup_cmake  setup_riscv_gcc
src/: CMakeLists.txt  alarm.c  entropy.c  misc.c  openthread-core-bl702-config-check.h  openthread-core-bl702-config.h  radio.c  uart.c
